2005-05-16  Ulrich Weigand  <uweigand@de.ibm.com>

	* s390-tdep.c (s390_pseudo_register_read, s390_pseudo_register_write):
	Change type of 'buf' argument to gdb_byte *.
	(s390x_pseudo_register_read, s390x_pseudo_register_write): Likewise.
	(s390_register_to_value): Change type of 'out' to gdb_byte *, change
	type of 'in' to gdb_byte [].
	(s390_value_to_register): Change type of 'in' to gdb_byte *, change
	type of 'out' to gdb_byte [].
	(s390_return_value): Change type of 'out' and 'in' to gdb_byte *.

2005-05-16  Andrew Cagney  <cagney@gnu.org>

	* target.h (target_read_partial, target_write_partial)
	(do_xfer_memory, xfer_memory, target_read, target_write)
	(get_target_memory): For buffers, change "void*" to gdb_byte.
	(struct target_ops): Ditto for to_xfer_partial and
	deprecated_xfer_memory.
	* dcache.h (dcache_xfer_memory): Ditto.
	* target.c (default_xfer_partial, target_read_partial) 
	(target_write_partial, target_read, target_write) 
	(do_xfer_memory, update_current_target, get_target_memory): Update.
	(target_read_string): Change buf to a gdb_byte.
	* dcache.c (dcache_xfer_memory): Update.
	* exec.c (xfer_memory): Make buffer type to gdb_byte.
	* mem-break.c (default_memory_insert_breakpoint): Remove cast.
	* disasm.c (dis_asm_read_memory): Remove cast, use gdb_byte.

2005-05-16  Mark Kettenis  <kettenis@gnu.org>

	* sol-thread.c (ignore): Change last argument to `gdb_byte.'

	* config/i386/fbsd.mt (DEPRECATED_TM_FILE): Remove.
	* config/i386/fbsd64.mt (DEPRECATED_TM_FILE): Remove.
	* config/i386/nbsd.mt (DEPRECATED_TM_FILE): Remove.
	* config/i386/nbsd64.mt (DEPRECATED_TM_FILE): Remove.
	* config/sparc/nbsd.mt (DEPRECATED_TM_FILE): Remove.
	* config/sparc/nbsd64.mt (DEPRECATED_TM_FILE): Remove.

	* observer.sh: Quote $DJGPP.

2005-05-15  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (.y.c): Update ylwrap invocation.

2005-05-15  Daniel Jacobowitz  <dan@codesourcery.com>

	* linux-nat.c (child_follow_fork, linux_handle_extended_wait)